--- a/src/components/FeedbackOptions/FeedbackOptions.module.css
+++ b/src/components/FeedbackOptions/FeedbackOptions.module.css
@@ -1,6 +1,7 @@
 .feedback_options_list {
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 
 .feedback_options button:not(:last-child) {
